[package]
name = "cubeb-pulse"
version = "0.0.1"
authors = ["Dan Glastonbury <dglastonbury@mozilla.com>"]
description = "Cubeb backed for PulseAudio written in Rust"

[lib]
crate-type = ["staticlib"]

[dependencies]
cubeb-ffi = { path = "cubeb-ffi" }
libc = "^0.2.20"
pulse-ffi = { path = "pulse-ffi", default-features = false, features=["dynamic-link"] }
semver = "^0.6"
