[package]
name = "cubeb-pulse"
version = "0.1.0"
authors = ["Dan Glastonbury <dglastonbury@mozilla.com>"]
description = "Cubeb backed for PulseAudio written in Rust"

[features]
pulse-dlopen = ["pulse-ffi/dlopen"]

[lib]
crate-type = ["staticlib", "rlib"]

[dependencies]
cubeb-backend = { git = "https://github.com/djg/cubeb-rs", version = "0.3" }
cubeb-core = { git = "https://github.com/djg/cubeb-rs", version = "0.1" }
pulse-ffi = { path = "pulse-ffi" }
pulse = { path = "pulse-rs" }
semver = "^0.6"
